force-app/main/default/objects/Diagnostico_del_Evento__c/Diagnostico_del_Evento__c.object-meta.xml
<CustomObject>
    <label>Diagnóstico del Evento</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Nombre de Diagnóstico del Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnósticos del Evento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>