force-app/main/default/objects/Diagnostico_del_Evento__c/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnóstico</label>
    <referenceTo>Diagnostico__c</referenceTo>
    <relationshipLabel>Diagnósticos del Evento</relationshipLabel>
    <relationshipName>Diagn_sticos_del_Evento</relationshipName>
    <type>Lookup</type>
</CustomField>