force-app/main/default/objects/Diagnostico_del_Evento__c/fields/Error_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Error_en_SS__c</fullName>
    <label>Error en SS</label>
    <length>66666</length>
    <type>Html</type>
</CustomField>