force-app/main/default/objects/Diagnostico_del_Evento__c/fields/Evento_Medico__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Diagnósticos del Evento</relationshipLabel>
    <relationshipName>Diagn_sticos_del_Evento</relationshipName>
    <type>Lookup</type>
</CustomField>