force-app/main/default/objects/Diagnostico_del_Evento__c/validationRules/Estado_de_EM_No_Anulado.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_de_EM_No_Anulado</fullName>
    <active>true</active>
    <description>El estado del EM debe ser distinto a anulado.</description>
    <errorConditionFormula>ISPICKVAL(Evento_Medico__r.Estado__c, &apos;Anulado&apos;)</errorConditionFormula>
    <errorMessage>El estado del EM debe ser distinto a anulado</errorMessage>
</ValidationRule>